--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,23 +7,22 @@
     <uses-sdk android:minSdkVersion="15" />
     <uses-feature android:name="android.hardware.camera" />  
     <uses-permission android:name="android.permission.CAMERA"/>
-
+	<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".SnaphApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
+            android:name=".UploadFormActivity"
+            android:label="@string/upload_form" >
+        </activity>
+         <activity
             android:name=".SnaphMainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-         <activity
-            android:name=".UploadFormActivity"
-            android:label="@string/upload_form" >
         </activity>
     </application>
 
